task 3 week, final

--- a/scss/blocks/_btn.scss
+++ b/scss/blocks/_btn.scss
@@ -9,3 +9,10 @@
 	padding: rem(9px) rem(16px);
 	@include ubuntu(medium);
 }
+
+.btn-burgers {
+
+	&:hover {
+     background-color: darken($orange, 7%);
+    }
+}
