--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,9 +22,11 @@ $phones: 480px;
 // blocks
 @import "blocks/_best.scss";
 @import "blocks/_btn.scss";
+@import "blocks/_burgers.scss";
 @import "blocks/_fixed-menu.scss";
 @import "blocks/_footer.scss";
 @import "blocks/_hamburger-menu-link.scss";
+@import "blocks/_hamburger-menu.scss";
 @import "blocks/_header.scss";
 @import "blocks/_hero.scss";
 @import "blocks/_logo.scss";
