--- a/css/main.css
+++ b/css/main.css
@@ -554,11 +554,229 @@ footer {
   font-family: 'Ubuntu', Helvetica, sans-serif;
   font-weight: 500; }
 
+.btn-burgers:hover {
+  background-color: #ce401a; }
+
+.burgers {
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(20%, #f9b43b), color-stop(50%, #eb8e38), color-stop(80%, #f9b43b));
+  background: -webkit-linear-gradient(bottom, #f9b43b 20%, #eb8e38 50%, #f9b43b 80%);
+  background: -o-linear-gradient(bottom, #f9b43b 20%, #eb8e38 50%, #f9b43b 80%);
+  background: linear-gradient(to top, #f9b43b 20%, #eb8e38 50%, #f9b43b 80%); }
+
+.burgers .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  position: relative; }
+
+.burgers__left {
+  width: 4%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.left-arrow {
+  display: block;
+  width: 1.875rem;
+  height: 1.875rem; }
+  .left-arrow:hover .left-arrow__icon {
+    margin-top: -0.9375rem;
+    margin-bottom: -0.9375rem;
+    margin-left: -0.9375rem;
+    width: 2.5rem;
+    height: 2.5rem; }
+
+.left-arrow__icon {
+  width: 1.875rem;
+  height: 1.0625rem;
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
+  transform-origin: center;
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+  fill: #fff; }
+
+.burgers__center {
+  width: 92%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  @media screen and (max-width: 768px) {
+    .burgers__center {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      text-align: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
+
+@media screen and (max-width: 768px) {
+  .burgers__img {
+    width: 95%; } }
+
+@media screen and (max-width: 480px) {
+  .burgers__img {
+    width: 90%; } }
+
+.burgers__desc {
+  color: #fff;
+  font-size: 0.875rem;
+  line-height: 1.8;
+  font-family: 'Ubuntu', Helvetica, sans-serif;
+  font-weight: 300; }
+  @media screen and (max-width: 768px) {
+    .burgers__desc {
+      width: 85%;
+      margin: 0 auto; } }
+  @media screen and (max-width: 480px) {
+    .burgers__desc {
+      width: 90%;
+      margin: 0 auto 3%; } }
+
+.burgers__price {
+  color: #e35028;
+  font-size: 4.5rem;
+  font-family: 'Gagalin', Helvetica, sans-serif; }
+
+.burgers__price-desc {
+  color: #e35028;
+  font-size: 1.875rem;
+  margin-right: 5%;
+  font-family: 'Gagalin', Helvetica, sans-serif; }
+
+.burgers__right {
+  width: 4%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.right-arrow {
+  display: block;
+  width: 1.875rem;
+  height: 1.875rem; }
+  .right-arrow:hover .right-arrow__icon {
+    margin-top: -0.9375rem;
+    margin-right: -0.9375rem;
+    margin-bottom: -0.9375rem;
+    width: 2.5rem;
+    height: 2.5rem; }
+
+.right-arrow__icon {
+  width: 1.875rem;
+  height: 1.0625rem;
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
+  transform-origin: center;
+  -webkit-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  transform: rotate(270deg);
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+  fill: #fff; }
+
+.burgers__composition {
+  display: block;
+  position: absolute;
+  top: 14%;
+  left: 5%;
+  width: 5.625rem;
+  height: 5.625rem;
+  border-radius: 0.3125rem;
+  background-color: #f08c33;
+  text-align: center;
+  text-decoration: none; }
+  @media screen and (max-width: 768px) {
+    .burgers__composition {
+      top: 5%;
+      left: 10%; } }
+  @media screen and (max-width: 480px) {
+    .burgers__composition {
+      top: 5%;
+      left: 0%; } }
+
+.burgers__composition-img {
+  width: 2.8125rem;
+  height: 2.8125rem;
+  fill: #fff;
+  margin-top: 10%; }
+
+.burgers__composition-desc {
+  font-size: 0.875rem;
+  color: #fff;
+  font-family: 'Gagalin', Helvetica, sans-serif; }
+
+.burgers__kkal-img {
+  position: absolute;
+  width: 3.75rem;
+  height: 3.75rem;
+  fill: #fff;
+  left: 5%;
+  bottom: 16%; }
+  @media screen and (max-width: 768px) {
+    .burgers__kkal-img {
+      left: 80%;
+      bottom: 87%; } }
+  @media screen and (max-width: 480px) {
+    .burgers__kkal-img {
+      left: 86%;
+      bottom: 88%; } }
+
+.burgers__kkal-desc {
+  position: absolute;
+  left: 5%;
+  bottom: 13%;
+  width: 3.75rem;
+  height: 3.75rem;
+  text-align: center;
+  font-size: 0.875rem;
+  color: #fff;
+  line-height: 2;
+  font-family: 'Gagalin', Helvetica, sans-serif; }
+  @media screen and (max-width: 768px) {
+    .burgers__kkal-desc {
+      left: 80%;
+      bottom: 84.5%; } }
+  @media screen and (max-width: 480px) {
+    .burgers__kkal-desc {
+      left: 86%;
+      bottom: 85.5%; } }
+
+.burgers__kkal-nbrs {
+  font-size: 1.125rem; }
+
 .fixed-menu {
   position: fixed;
   top: 5.625rem;
   right: 2.5rem; }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 480px) {
     .fixed-menu {
       display: none; } }
 
@@ -672,7 +890,8 @@ footer {
   -ms-flex-align: center;
   align-items: center;
   margin-left: 1.875rem;
-  display: none; }
+  display: none;
+  cursor: pointer; }
   @media screen and (max-width: 768px) {
     .hamburger-menu-link {
       display: -webkit-box;
@@ -695,6 +914,80 @@ footer {
 
 .hamburger-menu-link__bars:after {
   bottom: 0; }
+
+.hamburger-menu {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background-color: #2f3234;
+  font-size: 1.5rem;
+  display: none;
+  opacity: 0.95; }
+
+.hamburger-menu__list {
+  height: 93.25%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.hamburger-menu__item {
+  white-space: nowrap;
+  margin-right: 0.125rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-family: 'Ubuntu', Helvetica, sans-serif;
+  font-weight: 500; }
+  .hamburger-menu__item:last-child {
+    margin-right: 0; }
+    .hamburger-menu__item:last-child:after {
+      display: none; }
+  .hamburger-menu__item:after {
+    display: inline-block;
+    vertical-align: middle;
+    content: ' ';
+    width: 0.3125rem;
+    height: 0.3125rem;
+    border-radius: 0.15625rem;
+    background-color: #fff;
+    margin: 0 0.75rem 1.25rem 0.75rem; }
+
+.hamburger-menu__link {
+  text-decoration: none;
+  color: #fff;
+  margin-bottom: 1.25rem; }
+
+.close-menu {
+  width: 2.5%;
+  height: 2.5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 4.5%;
+  margin-right: 2.5%;
+  margin-left: auto;
+  cursor: pointer; }
+
+.close-menu__icon {
+  width: 1.25rem;
+  height: 1.25rem;
+  fill: #fff;
+  opacity: 0.7; }
 
 .header {
   width: 90%;
@@ -780,6 +1073,9 @@ footer {
   -ms-flex-pack: center;
   justify-content: center;
   padding-bottom: 15%; }
+  @media screen and (max-width: 480px) {
+    .hero__container {
+      padding-bottom: 30%; } }
 
 .hero__right {
   padding-left: 1%; }
@@ -848,6 +1144,9 @@ footer {
     margin-top: -0.9375rem;
     width: 2.5rem;
     height: 2.5rem; }
+  @media screen and (max-width: 480px) {
+    .down-arrow {
+      bottom: 3.75rem; } }
 
 .down-arrow__icon {
   width: 1.875rem;
@@ -860,7 +1159,7 @@ footer {
 .logo {
   display: inline-block;
   position: relative;
-  z-index: 110; }
+  z-index: 1100; }
   .logo svg {
     max-width: 95%; }
 
@@ -870,11 +1169,9 @@ footer {
 .logo__icon path:nth-child(1) {
   fill: #e45028; }
 
-.map {
-  background: url(../img/content/map.jpg);
-  background-repeat: no-repeat;
-  background-position: center bottom;
-  background-size: cover; }
+.yandex-map {
+  width: 100%;
+  height: 100%; }
 
 .menu-acco {
   position: absolute;
@@ -1162,10 +1459,10 @@ footer {
   background: transparent; }
 
 .order__radio_checkbox .order__radio-elem:checked + .order__radio-fake:after {
-  background: url("../img/form/check.svg") 50% no-repeat transparent;
+  background: url("../img/form/checkbox-active.png") 50% no-repeat transparent;
   background-size: contain;
-  width: 0.6875rem;
-  height: 0.5625rem; }
+  width: 1.0625rem;
+  height: 0.9375rem; }
 
 .order__form-button {
   margin-right: 1.25rem;
@@ -1345,6 +1642,17 @@ footer {
     color: #2f3234; }
   .section__title.section__title_white {
     color: white; }
+  .section__title.section__title-burgers {
+    line-height: .9;
+    margin-bottom: 10%; }
+    @media screen and (max-width: 768px) {
+      .section__title.section__title-burgers {
+        width: 80%;
+        margin: 0 auto 4%; } }
+    @media screen and (max-width: 480px) {
+      .section__title.section__title-burgers {
+        line-height: 1.2;
+        margin: 0 auto 4%; } }
   @media screen and (max-width: 480px) {
     .section__title {
       font-size: 3.9375rem; } }
