--- a/scss/blocks/_hamburger-menu-link.scss
+++ b/scss/blocks/_hamburger-menu-link.scss
@@ -4,7 +4,8 @@
 	height: rem(22px);
 	align-items: center;
 	margin-left: rem(30px);
-    display: none;
+	display: none;
+	cursor: pointer;
 
     @include tablets() {
         display: flex;
