--- a/scss/blocks/_map.scss
+++ b/scss/blocks/_map.scss
@@ -1,6 +1,4 @@
-.map {
-	background: url(../img/content/map.jpg);
-    background-repeat: no-repeat;
-    background-position: center bottom;
-    background-size: cover;
+.yandex-map {
+    width: 100%;
+    height: 100%;
 }
